--- a/documentation/emotes.html
+++ b/documentation/emotes.html
@@ -119,31 +119,31 @@
                                                                         <tr>
                                                                             <td><img src=https://static-cdn.jtvnw.net/emoticons/v1/25/1.0 data-toggle="tooltip" title="" data-original-title="Kappa" class="emotespin"></img><img src=https://static-cdn.jtvnw.net/emoticons/v1/25/1.0 data-toggle="tooltip" title="" data-original-title="Kappa" class="emotespin2"></img><img src=https://static-cdn.jtvnw.net/emoticons/v1/25/1.0 data-toggle="tooltip" title="" data-original-title="Kappa" class="emotespin3"></img>
                                                                             </td>
-                                                                            <td><code style="background-color:#f0f0f0!important;">Kappa:spin</code> <code style="background-color:#f0f0f0!important;">Kappa:spin2</code> <code style="background-color:#f0f0f0!important;">Kappa:spin3</code>
-                                                                                <br><code style="background-color:#f0f0f0!important;">Kappa:1spin</code> <code style="background-color:#f0f0f0!important;">Kappa:2spin</code> <code style="background-color:#f0f0f0!important;">Kappa:3spin</code></td>
+                                                                            <td><code style="background-color:#1f1f1f!important;">Kappa:spin</code> <code style="background-color:#1f1f1f!important;">Kappa:spin2</code> <code style="background-color:#1f1f1f!important;">Kappa:spin3</code>
+                                                                                <br><code style="background-color:#1f1f1f!important;">Kappa:1spin</code> <code style="background-color:#1f1f1f!important;">Kappa:2spin</code> <code style="background-color:#1f1f1f!important;">Kappa:3spin</code></td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td><img src=https://cdn.frankerfacez.com/emoticon/104910/1 data-toggle="tooltip" title="" data-original-title="Omni" class="emoteshake"></img><img src=https://cdn.frankerfacez.com/emoticon/104910/1 data-toggle="tooltip" title="" data-original-title="Omni" class="emoteshake2"></img><img src=https://cdn.frankerfacez.com/emoticon/104910/1 data-toggle="tooltip" title="" data-original-title="Omni" class="emoteshake3"></img>
                                                                             </td>
-                                                                            <td><code style="background-color:#f0f0f0!important;">Omni:shake</code> <code style="background-color:#f0f0f0!important;">Omni:shake2</code> <code style="background-color:#f0f0f0!important;">Omni:shake3</code></td>
+                                                                            <td><code style="background-color:#1f1f1f!important;">Omni:shake</code> <code style="background-color:#1f1f1f!important;">Omni:shake2</code> <code style="background-color:#1f1f1f!important;">Omni:shake3</code></td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td><img src=https://cdn.betterttv.net/emote/56cb56f5500cb4cf51e25b90/1x data-toggle="tooltip" title="" data-original-title="nymnCorn"></img>==><img src=https://cdn.betterttv.net/emote/56cb56f5500cb4cf51e25b90/1x data-toggle="tooltip" title="" data-original-title=" nymnCorn" class="emoteflip"></img>
                                                                             </td>
-                                                                            <td><code style="background-color:#f0f0f0!important;"> nymnCorn:flip</code></td>
+                                                                            <td><code style="background-color:#1f1f1f!important;"> nymnCorn:flip</code></td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td><img src=https://cdn.frankerfacez.com/emoticon/71699/1 data-toggle="tooltip" title="" data-original-title="Jumpman" class="emotepulse"></img>
                                                                             </td>
-                                                                            <td><code style="background-color:#f0f0f0!important;">Jumpman:pulse</code></td>
+                                                                            <td><code style="background-color:#1f1f1f!important;">Jumpman:pulse</code></td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td><img src=https://cdn.betterttv.net/emote/558b3755b86d24a72a221e50/1x data-toggle="tooltip" title="" data-original-title="VDoit1"><img src=https://cdn.betterttv.net/emote/558b0c1eb86d24a72a221e1a/1x data-toggle="tooltip" title="" data-original-title="VDoit2">
                                                                                 <br>
                                                                                 <img src=https://cdn.betterttv.net/emote/558b0c39b86d24a72a221e1c/1x data-toggle="tooltip" title="" data-original-title="VDoit3" class="emotebl"><img src=https://cdn.betterttv.net/emote/558b0c6fb86d24a72a221e1f/1x data-toggle="tooltip" title="" data-original-title="VDoit4" class="emotebr"></td>
-                                                                            <td><code style="background-color:#f0f0f0!important;">Vdoit1</code> (Normal)<code style="background-color:#f0f0f0!important;">VDoit2:tr</code> (Top Right)
+                                                                            <td><code style="background-color:#1f1f1f!important;">Vdoit1</code> (Normal)<code style="background-color:#1f1f1f!important;">VDoit2:tr</code> (Top Right)
                                                                                 <br>
-                                                                                <code style="background-color:#f0f0f0!important;">VDoit3:bl</code> (Bottom Left)<code style="background-color:#f0f0f0!important;">VDoit4:br</code> (Bottom Right)</td>
+                                                                                <code style="background-color:#1f1f1f!important;">VDoit3:bl</code> (Bottom Left)<code style="background-color:#1f1f1f!important;">VDoit4:br</code> (Bottom Right)</td>
                                                                         </tr>
                                                                     </tbody>
                                                                 </table>
@@ -177,7 +177,7 @@
                             <a href="/documentation/install_linux.html" class="sidebar-link">Linux</a>
                             <strong class="sidebar-title">How to use</strong>
                             <a href="../documentation/plugin_api.html" class="sidebar-link">Plugin API</a>
-                            <a href=/emotes.html class="sidebar-link current">Emotes</a>
+                            <a href="../documentation/emotes.html" class="sidebar-link current">Emotes</a>
                             <strong class="sidebar-title">Troubleshooting</strong>
                             <a href="../documentation/betterdiscord_troubleshoot.html" class="sidebar-link">BetterDiscord</a>
                             <a href="../documentation/theme_troubleshoot.html" class="sidebar-link">Themes</a>
