--- a/documentation/emotes.html
+++ b/documentation/emotes.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
-
-<head>
+<html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#"><head>
     <title>BetterDiscord Emotes</title>
     <meta charset=utf-8>
-    <meta content="width=device-width,initial-scale=1" name=viewport> to
+    <meta content="width=device-width,initial-scale=1" name=viewport>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
     <meta content="IE=edge" http-equiv=X-UA-Compatible>
     <meta content="width=device-width,initial-scale=1" name=viewport>
