--- a/documentation/themes/nier-automata.html
+++ b/documentation/themes/nier-automata.html
@@ -5,7 +5,7 @@
     <title>NieR Automata</title>
     <meta charset=utf-8>
     <meta content="IE=edge" http-equiv=X-UA-Compatible>
-    <meta content="width=device-width,initial-scale=1" name=viewport> to
+    <meta content="width=device-width,initial-scale=1" name=viewport>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
     <meta content="width=device-width,initial-scale=1" name=viewport>
     <meta content="Based on game NieR Automata ; Of character 2B" name=description>
