--- a/documentation/install_plugin.html
+++ b/documentation/install_plugin.html
@@ -140,7 +140,7 @@ Mac: ~/Library/Preferences/BetterDiscord/plugins</code></pre></div>make sure the
                             <a href="/documentation/install_linux.html" class="sidebar-link">Linux</a>
                             <strong class="sidebar-title">How to use</strong>
                             <a href="../documentation/plugin_api.html" class="sidebar-link">Plugin API</a>
-                            <a href=/emotes.html class="sidebar-link">Emotes</a>
+                            <a href=../documentation/emotes.html class="sidebar-link">Emotes</a>
                             <strong class="sidebar-title">Troubleshooting</strong>
                             <a href="../documentation/betterdiscord_troubleshoot.html" class="sidebar-link">BetterDiscord</a>
                             <a href="../documentation/theme_troubleshoot.html" class="sidebar-link">Themes</a>
