--- a/documentation/themes/otakudiscord.html
+++ b/documentation/themes/otakudiscord.html
@@ -5,7 +5,7 @@
     <title>OtakuDiscord</title>
     <meta charset=utf-8>
     <meta content="IE=edge" http-equiv=X-UA-Compatible>
-    <meta content="width=device-width,initial-scale=1" name=viewport> to
+    <meta content="width=device-width,initial-scale=1" name=viewport>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
     <meta content="width=device-width,initial-scale=1" name=viewport>
     <meta content="A mostly dark theme, for anime lovers. Can be edited easily" name=description>
