--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="initial-scale=1, maximum-scale=1" name="viewport">
-<meta content="Free quality Themes and Plugins for Discord and easy installation instructions for BetterDiscord and/or BeautifulDiscord!" name="description">
+<meta content="Free quality Themes and Plugins for Discord and easy installation instructions for BetterDiscord and more!" name="description">
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To Better BeautifulDiscord Beautiful Install" name="keywords">
 
 <!-- og:meta -->
@@ -16,7 +16,7 @@
 <meta property="og:url" content="https://betterdocs.net/"/>
 <meta property="og:site_name" content="Omni"/>
 <meta property="og:title" content="BetterDocs"/>
-<meta property="og:description" content="Free quality Themes and Plugins for Discord and easy installation instructions for BetterDiscord and/or BeautifulDiscord!"/>
+<meta property="og:description" content="Free quality Themes and Plugins for Discord and easy installation instructions for BetterDiscord and more"/>
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png"/>
 
 <!-- Tab icon -->
