--- a/plugins.html
+++ b/plugins.html
@@ -21,7 +21,16 @@
 
     <!-- Icon -->
     <link href=https://imgur.com/GZVRLfz.png rel="shortcut icon">
-
+	
+    <!-- Optimization -->
+    <style>.async-hide { opacity: 0 !important} </style>
+    <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
+	h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
+		(a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
+			})(window,document.documentElement,'async-hide','dataLayer',4000,
+		{'GTM-TJDGNWF':true});
+    </script>
+	    
     <!-- Google Analytics -->
     <script>
         (function(i, s, o, g, r, a, m) {
@@ -36,6 +45,7 @@
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
         ga('create', 'UA-65593962-3', 'auto');
+	ga('require', 'GTM-TJDGNWF');
         ga('send', 'pageview');
     	</script>
 
