--- a/plugins.html
+++ b/plugins.html
@@ -163,7 +163,7 @@
             <div class="inner">
                   <header id="plugin-list-header">
                 <h1 id="plugin-list-title">Plugins</h1>
-                <div id="plugin-list-count" class="total-items">Total Plugins: 110</div>
+                <div id="plugin-list-count" class="total-items">Total Plugins: 118</div>
                 <input type="search" id="plugin-search-input" placeholder="Search plugins...">
               </header>
                  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -180,7 +180,7 @@
                 <h1 id="plugin-list-title" class="bd-header">
                       <div id="betterdiscord"> <span class="bd-title">Better</span>Discord <a class="article-anchor page" href="#betterdiscord" aria-hidden="true"></a></div>
                     </h1>
-                <div id="plugin-list-count">110 Plugins</div>
+                <div id="plugin-list-count">118 Plugins</div>
                 <hr>
               </header>
                  
@@ -851,6 +851,7 @@ Requires React-Devtools being installed in your chrome browser:
                       <a href="#Channels" class="plugin-tag">Channels</a>
                       <a href="#Customize" class="plugin-tag">Customize</a>
                       <a href="#Colors" class="plugin-tag">Colors</a>
+                      <a href="#Edit" class="plugin-tag">Edit</a>
                       </div>
                     </li>
                     <li class="plugin on"> <a href="https://github.com/Inve1951/BetterDiscordStuff/blob/master/plugins/defaultToEmojis.plugin.js" class="plugin-name" target="_blank">Default To Emojis</a>
@@ -877,6 +878,83 @@ Requires React-Devtools being installed in your chrome browser:
                       <a href="#Zerebos" class="plugin-tag">Zerebos</a>
                       <a href="#Send" class="plugin-tag">Send</a>
                       <a href="#Button" class="plugin-tag">Button</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/ReverseImageSearch/" class="plugin-name" target="_blank">ReverseImageSearch</a>
+                      <p class="plugin-desc">Adds the option to right click an image and use an engine to reverse image search it.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a>
+                      <a href="#Images" class="plugin-tag">Images</a>
+                      <a href="#Search" class="plugin-tag">Search</a>
+                      <a href="#Pictures" class="plugin-tag">Pictures</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/NotificationSounds/" class="plugin-name" target="_blank">NotificationSounds</a>
+                      <p class="plugin-desc">Plays CUSTOM sounds for direct messages and mentions in a server.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a>
+                      <a href="#Mentions" class="plugin-tag">Mentions</a>
+                      <a href="#Sound" class="plugin-tag">Sound</a>
+                      <a href="#Notifications" class="plugin-tag">Notifications</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/Zerthox/BetterDiscord-Plugins/blob/master/plugins/GuildSeperators.plugin.js" class="plugin-name" target="_blank">Guild Seperators</a>
+                      <p class="plugin-desc">Add Guild Seperators with a button in the context menu.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#Zerthox" class="plugin-tag">Zerthox</a>
+                      <a href="#Guilds" class="plugin-tag">Guilds</a>
+                      <a href="#Serperate" class="plugin-tag">Serperate</a>
+                      <a href="#Seperators" class="plugin-tag">Seperators</a>
+                      <a href="#Button" class="plugin-tag">Button</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/EditServers/" class="plugin-name" target="_blank">EditServers</a>
+                      <p class="plugin-desc">Change the local name, initials, icon and several colors for the selected server. Right click server icon to see options in context menu.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a>
+                      <a href="#Edit" class="plugin-tag">Edit</a>
+                      <a href="#Custom" class="plugin-tag">Custom</a>
+                      <a href="#Server" class="plugin-tag">Server</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/ShowHiddenChannels/" class="plugin-name" target="_blank">ShowHiddenChannels</a>
+                      <p class="plugin-desc">Displays all hidden channels that can't be accessed due to role restrictions in a new category.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a>
+                      <a href="#Secret" class="plugin-tag">Secret</a>
+                      <a href="#Admin" class="plugin-tag">Admin</a>
+                      <a href="#Hidden" class="plugin-tag">Hidden</a>
+                      <a href="#Hacking" class="plugin-tag tag-invis">Hacking</a>
+                      <a href="#Hacks" class="plugin-tag tag-invis">Hacks</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/TopRoleEverywhere/" class="plugin-name" target="_blank">TopRoleEverywhere</a>
+                      <p class="plugin-desc">Adds the highest role of a user as a tag.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a>
+                      <a href="#Roles" class="plugin-tag">Roles</a>
+                      <a href="#Tags" class="plugin-tag">Tags</a>
+                      <a href="#High" class="plugin-tag">High</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/BetterNsfwTag/" class="plugin-name" target="_blank">BetterNsfwTag</a>
+                      <p class="plugin-desc">Adds a more noticeable tag to NSFW channels.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a>
+                      <a href="#Better" class="plugin-tag">Better</a>
+                      <a href="#Tags" class="plugin-tag">Tags</a>
+                      <a href="#NSFW" class="plugin-tag">NSFW</a>
+                      <a href="#Channels" class="plugin-tag">Channels</a>
+                      </div>
+                    </li>
+                    <li class="plugin on"> <a href="https://github.com/mwittrien/BetterDiscordAddons/blob/master/Plugins/ChatFilter/" class="plugin-name" target="_blank">ChatFilter</a>
+                      <p class="plugin-desc">Allows the user to censor words or block complete messages based on words in the chatwindow.</p>
+                      <div class="plugin-tag-list">
+                      <a href="#DevilBro" class="plugin-tag">DevilBro</a>
+                      <a href="#Filter" class="plugin-tag">Filter</a>
+                      <a href="#Block" class="plugin-tag">Block</a>
+                      <a href="#Hide" class="plugin-tag">Hide</a>
+                      <a href="#Censor" class="plugin-tag">Censor</a>
                       </div>
                     </li>
               </ul>
