--- a/documentation/sitemap.htm
+++ b/documentation/sitemap.htm
@@ -48,34 +48,34 @@
 </li><li><a href="https://betterdocs.net/making_theme.html"><span class="title">
       BetterDiscord
     </span></a>
-</li><li><a href="https://betterdocs.net/install_plugin.html"><span class="title">
+</li><li><a href="https://betterdocs.net/documentation/install_plugin.html"><span class="title">
       BetterDiscord
     </span></a>
-</li><li><a href="https://betterdocs.net/theme_troubleshoot.html"><span class="title">
+</li><li><a href="https://betterdocs.net/documentation/theme_troubleshoot.html"><span class="title">
       BetterDiscord
     </span></a>
-</li><li><a href="https://betterdocs.net/install_theme.html"><span class="title">
+</li><li><a href="https://betterdocs.net/documentation/install_theme.html"><span class="title">
       BetterDiscord
     </span></a>
-</li><li><a href="https://betterdocs.net/plugin_troubleshoot.html"><span class="title">
+</li><li><a href="https://betterdocs.net/documentation/plugin_troubleshoot.html"><span class="title">
       BetterDiscord
     </span></a>
 </li><li><a href="https://betterdocs.net/index.html"><span class="title">
       BetterDiscord
     </span></a>
-</li><li><a href="https://betterdocs.net/betterdiscord_troubleshoot.html"><span class="title">
+</li><li><a href="https://betterdocs.net/documentation/betterdiscord_troubleshoot.html"><span class="title">
       BetterDiscord
     </span></a>
-</li><li><a href="https://betterdocs.net/emotes.html"><span class="title">
+</li><li><a href="https://betterdocs.net/documentation/emotes.html"><span class="title">
       BetterDiscord
     </span></a>
-</li><li><a href="https://betterdocs.net/install_win.html"><span class="title">
+</li><li><a href="https://betterdocs.net/documentation/install_win.html"><span class="title">
       BetterDiscord
     </span></a>
-</li><li><a href="https://betterdocs.net/install_mac.html"><span class="title">
+</li><li><a href="https://betterdocs.net/documentation/install_mac.html"><span class="title">
       BetterDiscord
     </span></a>
-</li><li><a href="https://betterdocs.net/install_linux.html"><span class="title">
+</li><li><a href="https://betterdocs.net/documentation/install_linux.html"><span class="title">
       BetterDiscord
     </span></a>
 </li><li><a href="https://betterdocs.net/plugins.html"><span class="title">
@@ -90,7 +90,7 @@
 </li><li><a href="https://betterdocs.net/news/05_06_2016.html"><span class="title">BetterDiscord v0.2.8 Launch</span></a>
 </li><li><a href="https://betterdocs.net/news/07_22_2016.html"><span class="title">BetterDiscord Linux Beta Launch</span></a>
 </li><li><a href="https://betterdocs.net/contact.html"><span class="title">Contact Us</span></a>
-</li></ul></li><li><a href="https://betterdocs.net/plugin_api.html"><span class="title">
+</li></ul></li><li><a href="https://betterdocs.net/documentation/plugin_api.html"><span class="title">
       BetterDiscord
     </span></a>
 </li></ul></li></ul><!--<guid value="5527a355-fa08-4387-85d4-0b7bbdc8d71f" />--><!--Created using XmlSitemapGenerator.org - Free HTML, RSS and XML sitemap generator-->
