--- a/themes/strawberry.html
+++ b/themes/strawberry.html
@@ -9,7 +9,7 @@
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
 <meta content="initial-scale=1, maximum-scale=1" name="viewport">
 <meta content="straw berries? - straWberry" name="description">
-<meta content="Better Discord Theme CSS grey gray Dark Customizable Transparent Colors kiwiz" name="keywords">
+<meta content="Better Discord Theme CSS grey gray Dark Customizable Transparent Colors Kixi Kiwi" name="keywords">
 
 <!-- Open Graph -->
 <meta property="og:type" content="website" />
@@ -156,10 +156,10 @@
             <div class="inner">
               <header class="release-header">
                 <h1 class="release-title" itemprop="name">straWberry</h1>
-                <div class="release-btns"> <a href="https://github.com/Kiwez/themes/blob/master/straWberry/straWberry.theme.css" target="_blank" class="btn-release">Download</a>
+                <div class="release-btns"> <a href="https://github.com/KiwiNotKiwi/Themes/blob/master/straWberry.theme.css" target="_blank" class="btn-release">Download</a>
                   <div class="btn-author">Kiwiz</div>
                 </div>
-                <iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/Kiwez/themes/master/straWberry/straWberry.theme.css"></iframe>
+                <iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/darkdiscord.html?theme=https://raw.githubusercontent.com/KiwiNotKiwi/Themes/master/straWberry.theme.css"></iframe>
               </header>
               <div id="disqus_thread"></div>
               <script>
