--- a/themes/assets/darkdiscord.html
+++ b/themes/assets/darkdiscord.html
@@ -645,7 +645,7 @@ Line 3
 																			<h2 class="old-h2">
 																				<span class="username-wrapper">
 																					<strong class="user-name" style="color: rgb(26, 188, 156);">Omniscient</strong></span><span class="highlight-separator"> - </span><span class="timestamp">Yesterday at 11:55 PM</span></h2><div class="message-text"><div class="btn-option"></div><div class="btn-reaction"></div><div class="markup">Here is a mention <span class="mention" style="color: rgb(26, 188, 156); background: rgba(26, 188, 156, 0.1);">@Omniscient</span></div></div></div><div class="accessory"></div></div></div></div>
-                                                            <div class="message-group-blocked revealed"><div class="message-group-blocked-btn">1 Blocked Message</div><div class="message-group hide-overflow"><div class="avatar-large stop-animation" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/197773757492887552/acfd4627995f7248c104066e559d2a3c.webp?size=128&quot;);"></div><div class="comment"><div class="message first"><div class="body"><h2 class="old-h2"><span class="username-wrapper"><strong class="user-name" style="color: rgb(130, 181, 223);">Enceladus</strong></span></span><span class="highlight-separator"> - </span><span class="timestamp">Today at 12:26 AM</span></h2><div class="message-text"><div class="btn-option"></div><div class="btn-reaction"></div><div class="markup">Thanks</div></div></div><div class="accessory"></div></div></div></div></div>
+                                                            <div class="message-group-blocked revealed"><div class="message-group-blocked-btn">1 Blocked Message</div><div class="message-group hide-overflow"><div class="avatar-large stop-animation" style="background-image: url(&quot;https://i.imgur.com/T0JhWFA.png&quot;);"></div><div class="comment"><div class="message first"><div class="body"><h2 class="old-h2"><span class="username-wrapper"><strong class="user-name">Anonymous</strong></span></span><span class="highlight-separator"> - </span><span class="timestamp">Today at 12:26 AM</span></h2><div class="message-text"><div class="btn-option"></div><div class="btn-reaction"></div><div class="markup">I'm a Blocked Message that has been clicked on.</div></div></div><div class="accessory"></div></div></div></div></div>
 															<div class="message-group hide-overflow">
                                                                 <div class="avatar-large stop-animation" style="background-image: url(&quot;https://i.imgur.com/NGRqGHL.png&quot;);"></div>
                                                                 <div class="comment">
@@ -835,6 +835,8 @@ Line 3
                                                                 </div>
                                                             </div>
                                                         </div>
+														<h2 class="old-h2">Offline—1</h2>
+														<div class="member member-status member-status-offline"><div class="avatar-small stop-animation" style="background-image: url(&quot;https://i.imgur.com/T0JhWFA.png&quot;);"><div class="status status-offline"></div></div><div class="member-inner"><div class="member-username"><span class="member-username-inner" style="filter: grayscale(50%);">Anonymous</span></div></div></div>
                                                         <div style="width: 100%; height: 0px; visibility: hidden;"></div>
                                                     </div>
                                                 </div>
