--- a/themes/assets/darkdiscord.html
+++ b/themes/assets/darkdiscord.html
@@ -53,7 +53,7 @@
                                 </div>
                                 <div class="scroller-wrap">
                                     <div class="guilds scroller">
-                                        <div class="guild">
+                                        <div class="guild theme-top">
                                             <div class="guild-inner" draggable="false" style="border-radius: 25px; background-color: rgb(47, 49, 54);">
                                                 <a draggable="false" class="" href="/">
                                                     <div class="friends-icon"></div>
@@ -312,64 +312,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="container-2">
-                                                        <div class="containerDefault-1bbItS" draggable="true">
-                                                            <div class="flex-lFgbSz flex-3B1Tl4 horizontal-2BEEBe horizontal-2VE-Fw flex-3B1Tl4 directionRow-yNbSvJ justifyStart-2yIZo0 alignStart-pnSyE6 noWrap-v6g9vO wrapperDefault-1Dl4SS cursorPointer-3oKATS" style="flex: 1 1 auto;">
-                                                                <svg class="iconDefault-xzclSQ iconTransition-VhWJ85" width="12" height="12" viewBox="0 0 24 24">
-                                                                    <path fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M7 10L12 15 17 10"></path>
-                                                                </svg>
-                                                                <div class="nameDefault-Lnjrwm colorTransition-2iZaYd overflowEllipsis-2ynGQq" style="flex: 1 1 auto;">category collapsed</div>
-                                                                <div class="flex-lFgbSz flex-3B1Tl4 horizontal-2BEEBe horizontal-2VE-Fw flex-3B1Tl4 directionRow-yNbSvJ justifyStart-2yIZo0 alignCenter-3VxkQP noWrap-v6g9vO margin-reset" style="flex: 0 1 auto;">
-                                                                    <div class="">
-                                                                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" class="icon-2WU8ha">
-                                                                            <polygon fill-rule="nonzero" points="15 10 10 10 10 15 8 15 8 10 3 10 3 8 8 8 8 3 10 3 10 8 15 8"></polygon>
-                                                                        </svg>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="containerDefault-7RImuF" draggable="true">
-    <div class="wrapperDefaultText-3M3F1R wrapper-fDmxzK">
-        <div class="contentDefaultText-2elG3R content-2mSKOj">
-            <div class="marginReset-1YolDJ" style="flex: 0 0 auto;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" class="colorDefaultText-2v6rRX icon-3tVJnl">
-                    <path class="foreground-2zy1hc" fill="currentColor" d="M2.27333333,12 L2.74666667,9.33333333 L0.08,9.33333333 L0.313333333,8 L2.98,8 L3.68666667,4 L1.02,4 L1.25333333,2.66666667 L3.92,2.66666667 L4.39333333,0 L5.72666667,0 L5.25333333,2.66666667 L9.25333333,2.66666667 L9.72666667,0 L11.06,0 L10.5866667,2.66666667 L13.2533333,2.66666667 L13.02,4 L10.3533333,4 L9.64666667,8 L12.3133333,8 L12.08,9.33333333 L9.41333333,9.33333333 L8.94,12 L7.60666667,12 L8.08,9.33333333 L4.08,9.33333333 L3.60666667,12 L2.27333333,12 L2.27333333,12 Z M5.02,4 L4.31333333,8 L8.31333333,8 L9.02,4 L5.02,4 L5.02,4 Z" transform="translate(1.333 2)"></path>
-                </svg>
-            </div>
-            <div class="nameDefaultText-QoumjC name-2SL4ev overflowEllipsis-3Rxxjf" style="flex: 1 1 auto;">read</div>
-            <div class="flex-lFgbSz flex-3B1Tl4 horizontal-2BEEBe horizontal-2VE-Fw flex-3B1Tl4 directionRow-yNbSvJ justifyStart-2yIZo0 alignCenter-3VxkQP noWrap-v6g9vO marginReset-1YolDJ" style="flex: 0 1 auto;"></div>
-        </div>
-    </div>
-</div>
-    <div class="containerDefault-7RImuF" draggable="true">
-        <div class="wrapperUnreadText-1MykVG wrapper-fDmxzK">
-            <div class="unread-23Kvxk">
-            </div>
-            <div class="contentUnreadText-3oxASB content-2mSKOj">
-                <div class="marginReset-1YolDJ" style="flex: 0 0 auto;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" class="colorUnreadText-1KwCnP icon-3tVJnl">
-                        <path class="foreground-2zy1hc" fill="currentColor" d="M2.27333333,12 L2.74666667,9.33333333 L0.08,9.33333333 L0.313333333,8 L2.98,8 L3.68666667,4 L1.02,4 L1.25333333,2.66666667 L3.92,2.66666667 L4.39333333,0 L5.72666667,0 L5.25333333,2.66666667 L9.25333333,2.66666667 L9.72666667,0 L11.06,0 L10.5866667,2.66666667 L13.2533333,2.66666667 L13.02,4 L10.3533333,4 L9.64666667,8 L12.3133333,8 L12.08,9.33333333 L9.41333333,9.33333333 L8.94,12 L7.60666667,12 L8.08,9.33333333 L4.08,9.33333333 L3.60666667,12 L2.27333333,12 L2.27333333,12 Z M5.02,4 L4.31333333,8 L8.31333333,8 L9.02,4 L5.02,4 L5.02,4 Z" transform="translate(1.333 2)"></path>
-                    </svg>
-                </div>
-                <div class="nameUnreadText-1pxldj name-2SL4ev overflowEllipsis-3Rxxjf" style="flex: 1 1 auto;">unread</div>
-                <div class="flex-lFgbSz flex-3B1Tl4 horizontal-2BEEBe horizontal-2VE-Fw flex-3B1Tl4 directionRow-yNbSvJ justifyStart-2yIZo0 alignCenter-3VxkQP noWrap-v6g9vO marginReset-1YolDJ" style="flex: 0 1 auto;"></div>
-            </div>
-        </div>
-    </div>
-                                                        <div class="containerDefault-7RImuF" draggable="true">
-                                                            <div class="wrapperDefaultVoice-2ud9mj wrapper-fDmxzK">
-                                                                <div class="contentDefaultVoice-311dxZ content-2mSKOj">
-                                                                    <div class="marginReset-1YolDJ" style="flex: 0 0 auto;">
-                                                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" class="colorDefaultVoice-1x4dEl icon-3tVJnl">
-                                                                            <path class="foreground-2zy1hc" fill="currentColor" d="M9.33333333,2 L9.33333333,3.37333333 C11.26,3.94666667 12.6666667,5.73333333 12.6666667,7.84666667 C12.6666667,9.96 11.26,11.74 9.33333333,12.3133333 L9.33333333,13.6933333 C12,13.0866667 14,10.7 14,7.84666667 C14,4.99333333 12,2.60666667 9.33333333,2 L9.33333333,2 Z M11,7.84666667 C11,6.66666667 10.3333333,5.65333333 9.33333333,5.16 L9.33333333,10.5133333 C10.3333333,10.04 11,9.02 11,7.84666667 L11,7.84666667 Z M2,5.84666667 L2,9.84666667 L4.66666667,9.84666667 L8,13.18 L8,2.51333333 L4.66666667,5.84666667 L2,5.84666667 L2,5.84666667 Z"></path>
-                                                                        </svg>
-                                                                    </div>
-                                                                    <div class="nameDefaultVoice-1swZoh name-2SL4ev overflowEllipsis-3Rxxjf" style="flex: 1 1 auto;">voice channel</div>
-                                                                    <div class="flex-lFgbSz flex-3B1Tl4 horizontal-2BEEBe horizontal-2VE-Fw flex-3B1Tl4 directionRow-yNbSvJ justifyStart-2yIZo0 alignCenter-3VxkQP noWrap-v6g9vO marginReset-1YolDJ" style="flex: 0 1 auto;"></div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
+													<div class="container-2"><div class="containerDefault-1bbItS" draggable="true"><div class="flex-lFgbSz flex-3B1Tl4 horizontal-2BEEBe horizontal-2VE-Fw flex-3B1Tl4 directionRow-yNbSvJ justifyStart-2yIZo0 alignStart-pnSyE6 noWrap-v6g9vO wrapperCollapsed-18mf-c cursorPointer-3oKATS" style="flex: 1 1 auto;"><svg class="iconCollapsed-1INdMX iconTransition-VhWJ85 closed-2Hef-I" width="12" height="12" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M7 10L12 15 17 10"></path></svg><div class="nameCollapsed-3_ChMu colorTransition-2iZaYd overflowEllipsis-2ynGQq" style="flex: 1 1 auto;">category collapsed</div><div class="flex-lFgbSz flex-3B1Tl4 horizontal-2BEEBe horizontal-2VE-Fw flex-3B1Tl4 directionRow-yNbSvJ justifyStart-2yIZo0 alignCenter-3VxkQP noWrap-v6g9vO margin-reset" style="flex: 0 1 auto;"><div class=""><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" class="icon-2WU8ha"><polygon fill-rule="nonzero" points="15 10 10 10 10 15 8 15 8 10 3 10 3 8 8 8 8 3 10 3 10 8 15 8"></polygon></svg></div></div></div></div></div>
 <div class="container-3">
     <div class="containerDefault-1bbItS" draggable="true">
         <div class="flex-lFgbSz flex-3B1Tl4 horizontal-2BEEBe horizontal-2VE-Fw flex-3B1Tl4 directionRow-yNbSvJ justifyStart-2yIZo0 alignStart-pnSyE6 noWrap-v6g9vO wrapperMuted-PmsxPn cursorPointer-3oKATS" style="flex: 1 1 auto;">
@@ -782,7 +725,7 @@ Line 3
                                                                     </div>
                                                                 </div>
                                                             </div>
-															<div class="message-group"><div class="avatar-large stop-animation" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/172218388880293888/a74aaa81db633614ed77a50862b3a588.webp?size=128&quot;);"></div><div class="comment"><div><div class="edit-message edit-first-message"><div class="edit-container-outer"><div class="avatar-large stop-animation" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/172218388880293888/a74aaa81db633614ed77a50862b3a588.webp?size=128&quot;);"></div><div class="edit-container-inner"><h2 class="old-h2"><span class="username-wrapper"><strong class="user-name" style="color: rgb(226, 23, 89);">Omniscient</strong></span><span class="highlight-separator"> - </span><span class="timestamp">Today at 1:05 AM</span></h2><div class="channelTextAreaEnabled-c05Zpy channelTextArea-1HTP3C margin-top-8"><div class="innerEnabled-gLHeOL inner-3if5cm flex-3B1Tl4 innerNoAutocomplete-kaUXJZ"><div class="uploadInput-3oaE4N"><div class="file-input" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; opacity: 0; cursor: pointer;"></div></div><textarea rows="1" class="textAreaEnabled-2vOfh8 textArea-20yzAH textAreaEdit-1qc9VQ scrollbarGhostHairline-D_btXm scrollbar-11WJwo" style="height: auto;">Edit Message</textarea><div class="emojiButtonNormal-2yO7yT emojiButton-3c_qrT emojiButton-38mF6t"><div class="spriteNormal-3BYqCK sprite-3pvJkd" style="background-position: 0px 0px; background-size: 242px 110px;"></div></div></div></div><div class="edit-operation">escape to <a rel="noreferrer">cancel</a> • enter to <a rel="noreferrer">save</a></div></div></div></div><div class="accessory"></div></div></div></div>
+															<div class="message-group"><div class="avatar-large stop-animation" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/172218388880293888/a74aaa81db633614ed77a50862b3a588.webp?size=128&quot;);"></div><div class="comment"><div><div class="edit-message edit-first-message"><div class="edit-container-outer"><div class="avatar-large stop-animation" style="background-image: url(&quot;https://cdn.discordapp.com/avatars/172218388880293888/a74aaa81db633614ed77a50862b3a588.webp?size=128&quot;);"></div><div class="edit-container-inner"><h2 class="old-h2"><span class="username-wrapper"><strong class="user-name" style="color: rgb(26, 188, 156);">Omniscient</strong></span><span class="highlight-separator"> - </span><span class="timestamp">Today at 1:05 AM</span></h2><div class="channelTextAreaEnabled-c05Zpy channelTextArea-1HTP3C margin-top-8"><div class="innerEnabled-gLHeOL inner-3if5cm flex-3B1Tl4 innerNoAutocomplete-kaUXJZ"><div class="uploadInput-3oaE4N"><div class="file-input" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; opacity: 0; cursor: pointer;"></div></div><textarea rows="1" class="textAreaEnabled-2vOfh8 textArea-20yzAH textAreaEdit-1qc9VQ scrollbarGhostHairline-D_btXm scrollbar-11WJwo" style="height: auto;">Edit Message</textarea><div class="emojiButtonNormal-2yO7yT emojiButton-3c_qrT emojiButton-38mF6t"><div class="spriteNormal-3BYqCK sprite-3pvJkd" style="background-position: 0px 0px; background-size: 242px 110px;"></div></div></div></div><div class="edit-operation">escape to <a rel="noreferrer">cancel</a> • enter to <a rel="noreferrer">save</a></div></div></div></div><div class="accessory"></div></div></div></div>
                                                         </div>
                                                     </div>
 													<div class="jump-to-present-bar"><button type="button">You're viewing older messages</button><button type="button">Jump To Present</button></div>
