--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@
     	<![endif]-->
 </head>
 <body>
-<script src="https://my.hellobar.com/373de62a03c0d696505b5a07d1d53eb7861961de.js" type="text/javascript" charset="utf-8" async="async"></script>
+<!-- 4.0 preloader -->
+<div class="preloader">
+  <div class="ball-scale-ripple">
+    <div></div>
+  </div>
+</div>
+<!-- end peloader --> 
+
 <!-- 5.0 background container -->
 <div class="bg-container-canvas bg-star-effect"> </div>
 <!-- end background container --> 
