--- a/store.html
+++ b/store.html
@@ -195,7 +195,7 @@
 							</li>
 							<li style="list-style: none">
 								<br>
-								<p><a href="https://goo.gl/forms/kXOXTwkd3Y6iBKPJ3" target="_blank">Purchase Now $15</a></p>
+								<p><a href="https://www.paypal.me/Chaotiic/15" target="_blank">Purchase Now $15</a></p>
 							</li>
 							<div class="shop-stock">
   								<div style="text-decoration: underline;font-size: 20px;">5</div>
@@ -241,7 +241,7 @@
 							</li>
 							<li style="list-style: none">
 								<br>
-								<p><a href="https://goo.gl/forms/muqe7bNYTYglob0W2" target="_blank">Purchase Now $25</a></p>
+								<p><a href="https://www.paypal.me/Chaotiic/25" target="_blank">Purchase Now $25</a></p>
 							</li>
 							<div class="shop-stock">
   								<div style="text-decoration: underline;font-size: 20px;">5</div>
