--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
         </h1>
       </div>
       <!-- end word rotator --> 
-      <a href="https://discord.gg/0Tmfo5ZbORCRqbAd" class="button-regular animated entrance shorter" data-text="BetterDiscord">BetterDiscord</a> 
-      <a href="https://discord.gg/3Uu6eY" class="button-regular animated entrance beautifuldiscord shorter" data-text="BeautifulDiscord">BeautifulDiscord</a> <br>
-      <a href="#" class="button-regular show-countdown animated entrance shorter" data-text="BDv2 Countdown">BDv2 Countdown</a> 
+      <a href="https://discord.gg/0Tmfo5ZbORCRqbAd" class="button-regular animated shorter" data-text="BetterDiscord">BetterDiscord</a> 
+      <a href="https://discord.gg/3Uu6eY" class="button-regular animated beautifuldiscord shorter" data-text="BeautifulDiscord">BeautifulDiscord</a> <br>
+      <a href="#" class="button-regular show-countdown animated shorter" data-text="BDv2 Countdown">BDv2 Countdown</a> 
       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Popular Ad -->
 <ins class="adsbygoogle"
