--- a/submit.html
+++ b/submit.html
@@ -130,12 +130,15 @@
     <!-- content container -->
     <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 centering-y content-container"> 
       <!-- 8.1.2 word rotator -->
-      <div class="wordrotator-container animated entrance">
+      <div class="wordrotator-container animated">
         <h1 class="large-title release-title-submission">SUBMISSIONS</h1>
       </div>
       <!-- end word rotator --> 
       
-      <a href="https://goo.gl/forms/gb4yWWJcc64Tdyw43" class="button-regular animated entrance" data-text="Themes">Themes</a> <a href="https://goo.gl/forms/hVkZ0Vb2AP79AMIy1" class="button-regular animated entrance" data-text="Plugins">Plugins</a> <a href="https://goo.gl/forms/iNct0S7gldczjCuZ2" class="button-regular animated entrance" data-text="Feedback">Feedback</a> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <a href="https://goo.gl/forms/gb4yWWJcc64Tdyw43" class="button-regular animated" data-text="Themes">Themes</a> 
+      <a href="https://goo.gl/forms/hVkZ0Vb2AP79AMIy1" class="button-regular animated" data-text="Plugins">Plugins</a> 
+      <a href="https://goo.gl/forms/iNct0S7gldczjCuZ2" class="button-regular animated" data-text="Feedback">Feedback</a> 
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Popular Ad -->
 <ins class="adsbygoogle"
      style="display:block"
@@ -246,8 +249,6 @@
 <script type="text/javascript" src="js/jquery.slimscroll.min.js"></script> 
 <!-- jquery full page --> 
 <script type="text/javascript" src="js/jquery.fullPage.min.js"></script> 
-<!-- jquery wordrotator --> 
-<script type="text/javascript" src="js/jquery.wordrotator.min.js"></script>
 <!-- push js --> 
 <script type="text/javascript" src="js/pushy.min.js"></script>  
 <!-- main js --> 
