--- a/documentation/import/header.html
+++ b/documentation/import/header.html
@@ -4,6 +4,6 @@
  <a href="https://betterdocs.net/documentation/plugin_api.html" class="main-nav-link">API</a>
  <a href="https://betterdocs.net/themes.html" class="main-nav-link">Themes</a>
  <a href="https://betterdocs.net/plugins.html" class="main-nav-link">Plugins</a>
- <a href="https://betterdocs.net/documentation/shop/themes.html" class="main-nav-link">Shop</a>
+ <a href="https://betterdocs.net/store.html" class="main-nav-link">Shop</a>
  <a href="https://github.com/0mniscient/" class="main-nav-link"><i class="fa fa-github-alt"></i></a> 
 </nav>
