--- a/themes.html
+++ b/themes.html
@@ -216,8 +216,8 @@ lazyload(images);
                   <div class="plugin-tag-list"> <a href="#Omniscient" class="plugin-tag">Omniscient</a> <a href="#Flat" class="plugin-tag">Flat</a> <a href="#Dark" class="plugin-tag tag-invis">Dark</a> <a href="#Modern" class="plugin-tag tag-invis">Modern</a> <a href="#Material" class="plugin-tag tag-invis">Material</a> <a href="#Animations" class="plugin-tag tag-invis">Animations</a> <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
                 </li>
 		<li class="plugin on">
-                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="themes/images/loud.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/quiet.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
-                  <a href="https://betterdocs.net/themes/quiet.html" class="plugin-name">Loud</a>
+                  <div class="plugin-screenshot"> <img src="https://i.imgur.com/25W0otB.gif" data-src="themes/images/loud.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto"> <a href="https://betterdocs.net/themes/loud.html" class="plugin-preview-link"><i class="fa fa-eye"></i></a> </div>
+                  <a href="https://betterdocs.net/themes/loud.html" class="plugin-name">Loud</a>
                   <p class="plugin-desc">Light and Loud. Harsh on the eyes.</p>
                   <div class="plugin-tag-list"> <a href="#Omniscient" class="plugin-tag">Omniscient</a> <a href="#Flat" class="plugin-tag">Flat</a> <a href="#Light" class="plugin-tag tag-invis">Light</a> <a href="#Modern" class="plugin-tag tag-invis">Modern</a> <a href="#Material" class="plugin-tag tag-invis">Material</a> <a href="#Animations" class="plugin-tag tag-invis">Animations</a> <a href="#BetterDiscord" class="plugin-tag tag-invis">BetterDiscord</a> </div>
                 </li>
