--- a/index.html
+++ b/index.html
@@ -50,10 +50,6 @@
 </head>
 <body>
 
-<!-- 5.0 background container -->
-<div class="bg-container-canvas bg-star-effect"> </div>
-<!-- end background container --> 
-
 <!-- canvas -->
 <canvas id="bg-canvas" class="main-canvas"></canvas>
 <!-- end canvas --> 
@@ -190,7 +186,7 @@
       </div>
       <!-- end word rotator --> 
       <a href="https://discord.gg/0Tmfo5ZbORCRqbAd" class="button-regular animated shorter" data-text="BetterDiscord">BetterDiscord</a> 
-      <a href="https://discord.gg/3Uu6eY" class="button-regular animated beautifuldiscord shorter" data-text="BeautifulDiscord">BeautifulDiscord</a> <br>
+      <a href="https://discord.gg/MpWmqQk" class="button-regular animated beautifuldiscord shorter" data-text="Mr. Robot">Mr. Robot</a> <br>
       <a href="#" class="button-regular show-countdown animated shorter" data-text="BDv2 Countdown">BDv2 Countdown</a> 
       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Popular Ad -->
@@ -220,19 +216,9 @@
 <script type="text/javascript" src="js/bootstrap.min.js"></script> 
 <!-- countdown --> 
 <script type="text/javascript" src="js/jquery.lwtCountdown-1.0.js"></script> 
-<!-- backstretch --> 
-<script type="text/javascript" src="js/jquery.backstretch.min.js"></script> 
 <!-- constellation (star-effect) --> 
 <script type="text/javascript" src="js/constellation.js"></script> 
-<!-- jquery validate --> 
-<script type="text/javascript" src="js/jquery.validate.min.js"></script> 
-<!-- magnific popup --> 
-<script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script> 
-<!-- owl carousel --> 
-<script type="text/javascript" src="js/owl.carousel.js"></script> 
-<!-- jquery slimscroll (dependency of jquery full page) --> 
-<script type="text/javascript" src="js/jquery.slimscroll.min.js"></script> 
-<!-- jquery full page --> 
+<!-- jquery full page -->
 <script type="text/javascript" src="js/jquery.fullPage.min.js"></script> 
 <!-- push js --> 
 <script type="text/javascript" src="js/pushy.min.js"></script> 
