--- a/submit.html
+++ b/submit.html
@@ -234,8 +234,8 @@
 <script type="text/javascript" src="js/bootstrap.min.js"></script> 
 <!-- constellation (star-effect) --> 
 <script type="text/javascript" src="js/constellation.js"></script> 
-<!-- jquery full page -->
-<script type="text/javascript" src="js/jquery.fullPage.min.js"></script> 
+<!-- hello bar js --> 
+<script src="https://my.hellobar.com/373de62a03c0d696505b5a07d1d53eb7861961de.js" type="text/javascript" charset="utf-8" async="async"></script> 
 <!-- push js --> 
 <script type="text/javascript" src="js/pushy.min.js"></script>  
 <!-- main js --> 
